# macmop-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PRD.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
Formula/: macmop.rb
docs/: BETA_READINESS.md  QA_CHECKLIST.md
scripts/release/: check.sh  package.sh
src/: audit.rs  cli.rs  core.rs  executor.rs  lib.rs  main.rs  modules.rs  planner.rs  policy.rs  scanner.rs
src/modules/: apps.rs  cleanup.rs  cloud.rs  clutter.rs  config.rs  disk.rs  duplicates.rs  maintenance.rs  mod.rs  privacy.rs  protect.rs  report.rs  rollback.rs  scan.rs  startup.rs  status.rs  tui.rs
tests/: integration_apps.rs  integration_cleanup.rs  integration_cli.rs  integration_cloud.rs  integration_config.rs  integration_disk_clutter.rs  integration_duplicates.rs  integration_maintenance.rs  integration_policy.rs  integration_privacy.rs  integration_protect.rs  integration_rollback.rs  integration_startup.rs  integration_status.rs
