[package]
name = "macmop"
version = "0.1.0-alpha.3"
edition = "2021"
description = "Safety-first macOS cleanup CLI"
license = "MIT"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
directories = "5"
plist = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
