[package]
name = "macmop"
version = "0.1.0-alpha.14"
edition = "2021"
description = "Safety-first macOS cleanup CLI"
homepage = "https://github.com/muhvarriel/macmop-cli"
repository = "https://github.com/muhvarriel/macmop-cli"
license = "MIT"
readme = "README.md"
keywords = ["macos", "cleanup", "cli", "maintenance"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29.0"
ctrlc = "3"
directories = "5"
plist = "1"
ratatui = "0.30.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
